add try 2 admin

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,4 +1,5 @@
 backend:
+  name: backend-admin
   commit_messages:
     create: Create {{collection}} “{{slug}}”
     update: Update {{collection}} “{{slug}}”
@@ -12,6 +13,7 @@ publish_mode: editorial_workflow
 media_folder: "./"
 
 collections:
+  - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
     folder: "src/pages/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
